--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,4 +1,6 @@
 body {
-  width: 400px;
-  height: 400px;
+  width: 320px;
+  height: 512px;
+  background-color: #f5f5f5;
+  font-family: 'Roboto';
 }
