--- a/chrome_extension/src/popup/popup.css
+++ b/chrome_extension/src/popup/popup.css
@@ -1,6 +1,6 @@
 body {
-  width: 320px;
-  height: 512px;
-  background-color: #f5f5f5;
+  width: 150px;
+  height: 150px;
+  background-color: #fff;
   font-family: 'Roboto';
 }
